[gd_scene load_steps=6 format=2]

[ext_resource path="res://menus/harvesting.gd" type="Script" id=1]
[ext_resource path="res://tiles/menus_tiles.tres" type="TileSet" id=2]
[ext_resource path="res://gui/styles/theme_main.tres" type="Theme" id=3]
[ext_resource path="res://sprites/harvestNodes/harvest_copperOre.png" type="Texture" id=4]
[ext_resource path="res://menus/buttons/button_back.tscn" type="PackedScene" id=5]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 27, 0, 5, 27, 0, 10, 27, 0, 15, 27, 0, 262144, 27, 0, 262149, 27, 0, 262154, 27, 0, 262159, 27, 0, 524288, 27, 0, 524293, 27, 0, 524298, 27, 0, 524303, 27, 0, 786432, 27, 0, 786437, 27, 0, 786442, 27, 0, 786447, 27, 0, 1048576, 27, 0, 1048581, 27, 0, 1048586, 27, 0, 1048591, 27, 0, 1310720, 27, 0, 1310725, 27, 0, 1310730, 27, 0, 1310735, 27, 0, 1572864, 27, 0, 1572869, 27, 0, 1572874, 27, 0, 1572879, 27, 0, 1835008, 27, 0, 1835013, 27, 0, 1835018, 27, 0, 1835023, 27, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 10.0
margin_right = 480.0
margin_bottom = 436.0
theme = ExtResource( 3 )

[node name="centerContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 480.0
margin_bottom = 426.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/centerContainer"]
margin_left = 184.0
margin_top = 85.0
margin_right = 295.0
margin_bottom = 341.0

[node name="field_nodeName" type="Label" parent="MarginContainer/centerContainer/VBoxContainer"]
margin_right = 111.0
margin_bottom = 14.0
text = "#NODE NAME"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/centerContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 111.0
margin_bottom = 82.0

[node name="icon_nodeGraphic" type="TextureRect" parent="MarginContainer/centerContainer/VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/centerContainer/VBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 111.0
margin_bottom = 64.0

[node name="field_skill" type="Label" parent="MarginContainer/centerContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 43.0
margin_bottom = 14.0
text = "#SKILL"

[node name="field_riskLevel" type="Label" parent="MarginContainer/centerContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 43.0
margin_bottom = 32.0
text = "#SKILL"

[node name="button_pickHero" type="Button" parent="MarginContainer/centerContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 111.0
margin_bottom = 124.0
text = "SELECT HERO"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/centerContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 111.0
margin_bottom = 178.0

[node name="field_heroName" type="Label" parent="MarginContainer/centerContainer/VBoxContainer/VBoxContainer"]
margin_right = 111.0
margin_bottom = 14.0
text = "#HERO NAME"

[node name="field_heroSkill" type="Label" parent="MarginContainer/centerContainer/VBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 111.0
margin_bottom = 32.0
text = "#HERO SKILL"

[node name="field_heroRisk" type="Label" parent="MarginContainer/centerContainer/VBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 111.0
margin_bottom = 50.0
text = "#RISK LEVEL"

[node name="button_begin" type="Button" parent="MarginContainer/centerContainer/VBoxContainer"]
margin_top = 182.0
margin_right = 111.0
margin_bottom = 220.0
text = "BEGIN"

[node name="field_timeElapsed" type="Label" parent="MarginContainer/centerContainer/VBoxContainer"]
margin_top = 224.0
margin_right = 111.0
margin_bottom = 238.0
text = "#TIME ELAPSED"

[node name="field_prizeCount" type="Label" parent="MarginContainer/centerContainer/VBoxContainer"]
margin_top = 242.0
margin_right = 111.0
margin_bottom = 256.0
text = "#PRIZE COUNT"

[node name="button_back" parent="." instance=ExtResource( 5 )]

[node name="quest_finish_now_dialog" type="ConfirmationDialog" parent="."]
margin_left = 80.0
margin_top = 550.0
margin_right = 420.0
margin_bottom = 730.0
rect_min_size = Vector2( 200, 70 )
window_title = "Finish quest now"
dialog_text = "Finish quest now for 1 diamond?"
[connection signal="pressed" from="MarginContainer/centerContainer/VBoxContainer/button_pickHero" to="." method="_on_button_pickHero_pressed"]
[connection signal="pressed" from="MarginContainer/centerContainer/VBoxContainer/button_begin" to="." method="_on_button_beginHarvesting_pressed"]
[connection signal="pressed" from="button_back" to="." method="_on_button_back_pressed"]
[connection signal="confirmed" from="quest_finish_now_dialog" to="." method="_on_quest_finish_now_dialog_confirmed"]
